--- a/rl_setups/marketorderenv/nofee/ppo_adv_pred.yaml
+++ b/rl_setups/marketorderenv/nofee/ppo_adv_pred.yaml
@@ -1,35 +1,38 @@
-hpsearch-ppo:
+ppo:
     env: MarketOrderEnv-v0
-    run: PPO
+    run: PPOADV
     stop:
-        time_total_s: 1800 # 60*60*10
-        episode_reward_mean: 2
+        time_total_s:  36000 # 4*60*60
     config:
-        # Env configuration
         env_config:
-          max_sequence_skip: 150
+          max_sequence_skip: 1500
           random_start: True
-          max_episode_time: 5hours
+          max_episode_time: 12hours
 
         # Model
         # If true, use the Generalized Advantage Estimator (GAE)
         use_gae: True
         # GAE(lambda) parameter
-        lambda: 0.99
+        lambda: 0.8
+        gamma: 0.95
         # Initial coefficient for KL divergence
-        kl_coeff:
-          grid_search: [0.2, 0.4]
+        kl_coeff: 0.4
         # Override model config
         model:
+          # Whether to use LSTM model
+          #use_lstm: True
+          # Max seq length for LSTM training.
+          max_seq_len: 100
+          # Lstm cell size
+          lstm_cell_size: 64
           # if Fully connected net
-          fcnet_hiddens:
-            grid_search: [[64, 64], [128, 128]]
+          fcnet_hiddens: [128, 128]
           # Free log std
           free_log_std: False
           # Whether to squash the action output to space range
           squash_to_range: True
 
-          custom_preprocessor: mv
+          custom_preprocessor: mv_pred
           custom_options:
             fast_macd_l: 1200
             slow_macd_l: 2400
@@ -40,29 +43,27 @@ hpsearch-ppo:
 
         # Optimization
         # Number of timesteps collected for each SGD round
-        timesteps_per_batch: 40960
+        timesteps_per_batch: 70000
         # Whether to rollout "complete_episodes" or "truncate_episodes"
         batch_mode: complete_episodes
         # Number of SGD iterations in each outer loop
         num_sgd_iter: 10
         # Stepsize of SGD
-        sgd_stepsize:
-          grid_search: [0.05, 0.005]
+        sgd_stepsize: 0.025
         # Total SGD batch size across all devices for SGD (multi-gpu only)
         sgd_batchsize: 10240
         # Coefficient of the value function loss
-        vf_loss_coeff: 1.0
+        vf_loss_coeff: 0.8
         # Coefficient of the entropy regularizer
-        entropy_coeff:
-          grid_search: [0.01, 0.1]
+        entropy_coeff: 0.1
         # PPO clip parameter
-        clip_param: 0.3
+        clip_param: 0.2
         # Target value for KL divergence
         kl_target: 0.01
         # Use the sync samples optimizer instead of the multi-gpu one
         simple_optimizer: True
         # Resources
-        num_workers: 3
+        num_workers: 5
         # Number of GPUs to use for SGD
         num_gpus: 0
         # Whether to allocate GPUs for workers (if > 0).
@@ -70,6 +71,6 @@ hpsearch-ppo:
         # Whether to allocate CPUs for workers (if > 0).
         num_cpus_per_worker: 1
 
-    local_dir: ~/PycharmProjects/orderbookrl/logs/marketorderenv
-    checkpoint_freq: 2
+    local_dir: /media/olle/DATA/Projects/orderbookrl/logs/marketorderenv
+    checkpoint_freq: 5
 
