--- a/rl_setups/cartpole.yaml
+++ b/rl_setups/cartpole.yaml
@@ -5,11 +5,8 @@ cartpole-ppo:
         episode_reward_mean: 200
         time_total_s: 180
     config:
-        num_workers: 3
-        num_sgd_iter: 8
-        sgd_batchsize: 256
-        model:
-          use_lstm: True
-
-    local_dir: ~/PycharmProjects/orderbookrl/logs/test
-    checkpoint_freq: 1
+        num_workers: 2
+        num_sgd_iter:
+            grid_search: [1, 4]
+        sgd_minibatch_size:
+            grid_search: [128, 256, 512]
